; ModuleID = '/home/carl/AnghaBench/libuv/src/win/extr_util.c_uv__util_init.c'
source_filename = "/home/carl/AnghaBench/libuv/src/win/extr_util.c_uv__util_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { double }

@process_title_lock = common dso_local global i32 0, align 4
@hrtime_interval_ = common dso_local global double 0.000000e+00, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uv__util_init() #0 {
  %1 = alloca %struct.TYPE_3__, align 8
  %2 = call i32 @InitializeCriticalSection(i32* @process_title_lock)
  %3 = call i64 @QueryPerformanceFrequency(%struct.TYPE_3__* %1)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  %7 = load double, double* %6, align 8
  %8 = fdiv double 1.000000e+00, %7
  store double %8, double* @hrtime_interval_, align 8
  br label %10

9:                                                ; preds = %0
  store double 0.000000e+00, double* @hrtime_interval_, align 8
  br label %10

10:                                               ; preds = %9, %5
  ret void
}

declare dso_local i32 @InitializeCriticalSection(i32*) #1

declare dso_local i64 @QueryPerformanceFrequency(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
